--- a/sms.css
+++ b/sms.css
@@ -1,6 +1,4 @@
-
-h4 
-{
+h4 {
 	font-style: italic;
 	color: #2E4D47;
 }
@@ -9,162 +7,203 @@ h4
 	max-height: 200px;
 }
 
-.scrollLine img
-{
-	width : 150px;
+.scrollLine img {
+	width: 150px;
 }
 
-.center
-{
-margin:auto;
+.center {
+	margin: auto;
 }
 
-
-li a 					{display: block}
-li a:link       		{ color: #FFFFAA; text-decoration:none }
-
-li a:visited 			{text-decoration:none }
-
-li a:hover      		{
-color: #FFFFFF
-	
+li a {
+	display: block
 }
 
-
-table.menubar { background-color: #2e4d47; text-align: center
-	
+li a:link {
+	color: #FFFFAA;
+	text-decoration: none
 }
 
-
-table.menubar a:link 	{ font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
-
-table.menubar a:visited 	{ font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
-
-
-table.menubar a:hover 	{color: #FFFFFF}
-
-
-
-table.menuleaf a		{display: block}
-
-table.menuleaf a:link 	{ font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
-
-table.menuleaf a:hover 	{ color: #FFFFFF}
-
-table.menuleaf a:visited { font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
-
-
-
-table.menubar2 { background-color: #1c5e52; text-align: center
-	
+li a:visited {
+	text-decoration: none
 }
 
-table.menubar2 a:link 	{ font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
-
-table.menubar2 a:visited 	{ font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
-
-
-table.menubar2 a:hover 	{color: #FFFFFF}
-
-
-
-table.menubar3 { background-color: #1c5e52; text-align: center
-	
+li a:hover {
+	color: #FFFFFF
 }
 
-table.menubar3 a:link 	{ font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
+table.menubar {
+	background-color: #2e4d47;
+	text-align: center
+}
 
-table.menubar3 a:visited 	{ font-family: Arial; font-size: 10pt; color: #FFFFAA; text-decoration:none }
+table.menubar a:link {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
 
+table.menubar a:visited {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
 
-table.menubar3 a:hover 	{color: #FFFFFF}
+table.menubar a:hover {
+	color: #FFFFFF
+}
 
+table.menuleaf a {
+	display: block
+}
 
+table.menuleaf a:link {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
 
+table.menuleaf a:hover {
+	color: #FFFFFF
+}
 
+table.menuleaf a:visited {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
 
+table.menubar2 {
+	background-color: #1c5e52;
+	text-align: center
+}
 
-ul           			{  margin-left: 0; padding: 0; font-weight: normal}
+table.menubar2 a:link {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
 
-ul li:last-child 		{ border-bottom-style: solid; border-bottom-width: 0px}
+table.menubar2 a:visited {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
 
-ul li           		{ border-top-style: solid; border-top-width: 0px; padding: 2px; border-left-width:0px; border-right-width:0px }
+table.menubar2 a:hover {
+	color: #FFFFFF
+}
 
+table.menubar3 {
+	background-color: #1c5e52;
+	text-align: center
+}
 
-ul.o   {
-  list-style-type: square;
+table.menubar3 a:link {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
+
+table.menubar3 a:visited {
+	font-family: Arial;
+	font-size: 10pt;
+	color: #FFFFAA;
+	text-decoration: none
+}
+
+table.menubar3 a:hover {
+	color: #FFFFFF
+}
+
+ul {
+	margin-left: 0;
+	padding: 0;
+	font-weight: normal
+}
+
+ul li:last-child {
+	border-bottom-style: solid;
+	border-bottom-width: 0px
+}
+
+ul li {
+	border-top-style: solid;
+	border-top-width: 0px;
+	padding: 2px;
+	border-left-width: 0px;
+	border-right-width: 0px
+}
+
+ul.o {
+	list-style-type: square;
 }
 
 .style1 {
-	  text-align: left
-	
+	text-align: left
 }
 
 .style1h {
-	  text-align: center;
-color : #2E4D47;
-font-size:x-large
-
-	
+	text-align: center;
+	color: #2E4D47;
+	font-size: x-large
 }
-
 
 .style1m {
-	  text-align: center;
-color : #2E4D47;
-font-size:large
-	
+	text-align: center;
+	color: #2E4D47;
+	font-size: large
 }
 
-
-
 .style1a {
-        text-align: left;
-		color:#FFFFAA
-		
+	text-align: left;
+	color: #FFFFAA
 }
 
 .style1n {
-        text-align: left;
-		color:black;
-		
+	text-align: left;
+	color: black;
 }
-
 
 .style2 {
 	background-image: url('images/smsbbt.jpg');
 }
+
 .style3 {
 	text-align: right;
 }
+
 .menus {
 	text-align: center;
-	font-family:Arial;
+	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFF66;
 	background-color: #2e4d47;
 }
 
 .style14 {
-
 	border-width: 0px;
-
 	margin-top: 5px;
-
 	margin-bottom: 5px;
-
 }
 
 .style15 {
 	text-align: center;
 	color: black;
-	font-family:Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	border-collapse: collapse
 }
+
 .style16 {
 	font-size: medium;
 }
-
 
 .style17 {
 	border-color: #000000;
@@ -180,7 +219,6 @@ font-size:large
 	font-size: 10pt;
 	color: #FFFFAA;
 }
-
 
 .style19 {
 	border-style: solid;
@@ -205,15 +243,20 @@ font-size:large
 }
 
 .byline {
-  				font-family:sans-serif;
-  				font-size:75%;
-  				color:gray;
-  				line-height:20%;
-		}
-		
+	font-family: sans-serif;
+	font-size: 75%;
+	color: gray;
+	line-height: 20%;
+}
+
 .headline {
-			  line-height:20%;
+	line-height: 20%;
+}
 
-		  }
+.style101 {
+	text-align: center;
+}
 
-
+.style99 {
+	background-image: url('/images/throws1st.jpg');
+}
