--- a/sms.css
+++ b/sms.css
@@ -1,3 +1,15 @@
+h1 {
+	color: #2E4D47;
+}
+
+h2 {
+	color: #2E4D47;
+}
+
+h3 {
+	color: #2E4D47;
+}
+
 h4 {
 	font-style: italic;
 	color: #2E4D47;
