--- a/css/sms.css
+++ b/css/sms.css
@@ -1,3 +1,12 @@
+.titletext {
+	color: #FFFF66;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 2em;
+	font-style: italic;
+	font-weight: bold;
+	padding-left: 5px;
+}
+
 h1 {
 	color: #2E4D47;
 }
@@ -13,10 +22,6 @@ h3 {
 h4 {
 	font-style: italic;
 	color: #2E4D47;
-}
-
-#banner {
-	max-height: 200px;
 }
 
 .content {
@@ -59,94 +64,94 @@ li a:hover {
 	color: #FFFFFF
 }
 
-table.menubar {
+.menubar {
 	background-color: #2e4d47;
 	text-align: center
 }
 
-table.menubar a:link {
+.menubar a:link {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menubar a:visited {
+.menubar a:visited {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menubar a:hover {
+.menubar a:hover {
 	color: #FFFFFF
 }
 
-table.menuleaf a {
+.menuleaf a {
 	display: block
 }
 
-table.menuleaf a:link {
+.menuleaf a:link {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menuleaf a:hover {
+.menuleaf a:hover {
 	color: #FFFFFF
 }
 
-table.menuleaf a:visited {
+.menuleaf a:visited {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menubar2 {
+.menubar2 {
 	background-color: #1c5e52;
 	text-align: center
 }
 
-table.menubar2 a:link {
+.menubar2 a:link {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menubar2 a:visited {
+.menubar2 a:visited {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menubar2 a:hover {
+.menubar2 a:hover {
 	color: #FFFFFF
 }
 
-table.menubar3 {
+.menubar3 {
 	background-color: #1c5e52;
 	text-align: center
 }
 
-table.menubar3 a:link {
+.menubar3 a:link {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menubar3 a:visited {
+.menubar3 a:visited {
 	font-family: Arial;
 	font-size: 10pt;
 	color: #FFFFAA;
 	text-decoration: none
 }
 
-table.menubar3 a:hover {
+.menubar3 a:hover {
 	color: #FFFFFF
 }
 
@@ -199,8 +204,12 @@ ul.o {
 	color: black;
 }
 
-.style2 {
-	background-image: url('../images/smsbbt.jpg');
+.hero {
+	background-image: url('/images/run.png'), url('/images/smsbb.jpg');
+	background-position: right, left;
+	background-repeat: no-repeat, no-repeat;
+	max-height: 200px;
+	z-index: 0;
 }
 
 .style3 {
