--- a/css/sms.css
+++ b/css/sms.css
@@ -1,370 +1,363 @@
 .titletext {
-	color: #FFFF66;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 2em;
-	font-style: italic;
-	font-weight: bold;
-	padding-left: 5px;
+  color: #ffff66;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 2em;
+  font-style: italic;
+  font-weight: bold;
+  padding-left: 5px;
 }
 
 h1 {
-	color: #2E4D47;
+  color: #2e4d47;
 }
 
 h2 {
-	color: #2E4D47;
+  color: #2e4d47;
 }
 
 h3 {
-	color: #2E4D47;
+  color: #2e4d47;
 }
 
 h4 {
-	font-style: italic;
-	color: #2E4D47;
+  font-style: italic;
+  color: #2e4d47;
 }
 
 .content {
-	margin:25 auto;
-	max-width:1250px;
-	width: 100%
+  margin: 25 auto;
+  max-width: 1250px;
+  width: 100%;
 }
 
 .scrollLine img {
-	width: 150px;
+  width: 150px;
 }
 
-.maindiv{
-	margin:0 auto;
-	max-width:1250px;
+.maindiv {
+  margin: 0 auto;
+  max-width: 1250px;
 }
 
 .bodydiv {
-    width:100%
+  width: 100%;
 }
 
 .center {
-	margin: auto;
+  margin: auto;
 }
 
 li a {
-	display: block
+  display: block;
 }
 
 li a:link {
-	color: #FFFFAA;
-	text-decoration: none
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 li a:visited {
-	text-decoration: none
+  text-decoration: none;
 }
 
 li a:hover {
-	color: #FFFFFF
+  color: #ffffff;
 }
 
 .menubar {
-	background-color: #2e4d47;
-	text-align: center;
-	grid-area: menubar;
-	padding: 5px;
+  background-color: #2e4d47;
+  text-align: center;
+  grid-area: menubar;
+  padding: 5px;
 }
 
 .menubar a {
-	padding: 2%;
+  padding: 2%;
 }
 
 .menubar a:link {
-	font-family: Arial;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menubar a:visited {
-	font-family: Arial;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menubar a:hover {
-	color: #FFFFFF
+  color: #ffffff;
 }
 
-
 .menuleaf a {
-	display: block
+  display: block;
 }
 
 .menuleaf a:link {
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menuleaf a:hover {
-	color: #FFFFFF
+  color: #ffffff;
 }
 
 .menuleaf a:visited {
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menubar2 {
-	background-color: #1c5e52;
-	text-align: center
+  background-color: #1c5e52;
+  text-align: center;
 }
 
 .menubar2 a:link {
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menubar2 a:visited {
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menubar2 a:hover {
-	color: #FFFFFF
+  color: #ffffff;
 }
 
 .menubar3 {
-	background-color: #1c5e52;
-	text-align: center
+  background-color: #1c5e52;
+  text-align: center;
 }
 
 .menubar3 a:link {
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menubar3 a:visited {
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFFAA;
-	text-decoration: none
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffffaa;
+  text-decoration: none;
 }
 
 .menubar3 a:hover {
-	color: #FFFFFF
+  color: #ffffff;
 }
 
 ul {
-	margin-left: 0;
-	padding: 0;
-	font-weight: normal
+  margin-left: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
 ul li:last-child {
-	border-bottom-style: solid;
-	border-bottom-width: 0px
+  border-bottom-style: solid;
+  border-bottom-width: 0px;
 }
 
 ul li {
-	border-top-style: solid;
-	border-top-width: 0px;
-	padding: 2px;
-	border-left-width: 0px;
-	border-right-width: 0px
+  border-top-style: solid;
+  border-top-width: 0px;
+  padding: 2px;
+  border-left-width: 0px;
+  border-right-width: 0px;
 }
 
 ul.o {
-	list-style-type: square;
+  list-style-type: square;
 }
 
 .style1 {
-	text-align: left
+  text-align: left;
 }
 
 .style1h {
-	text-align: center;
-	color: #2E4D47;
-	font-size: x-large
+  text-align: center;
+  color: #2e4d47;
+  font-size: x-large;
 }
 
 .style1m {
-	text-align: center;
-	color: #2E4D47;
-	font-size: large
+  text-align: center;
+  color: #2e4d47;
+  font-size: large;
 }
 
 .style1a {
-	text-align: left;
-	color: #FFFFAA
+  text-align: left;
+  color: #ffffaa;
 }
 
 .style1n {
-	text-align: left;
-	color: black;
+  text-align: left;
+  color: black;
 }
 
 .hero {
-	background-image: url('/images/run.png'), url('/images/smsbb.jpg');
-	background-position: right, left;
-	background-repeat: no-repeat, no-repeat;
-	max-height: 200px;
-	z-index: 0;
+  background-image: url("/images/run.png"), url("/images/smsbb.jpg");
+  background-position: right, left;
+  background-repeat: no-repeat, no-repeat;
+  max-height: 200px;
+  z-index: 0;
 }
 
 .style3 {
-	text-align: right;
+  text-align: right;
 }
 
 .menus {
-	text-align: center;
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFF66;
-	background-color: #2e4d47;
+  text-align: center;
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffff66;
+  background-color: #2e4d47;
 }
 
 .style14 {
-	border-width: 0px;
-	margin-top: 5px;
-	margin-bottom: 5px;
+  border-width: 0px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .style15 {
-	text-align: center;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
-	border-collapse: collapse
+  text-align: center;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
 }
 
 .style16 {
-	font-size: medium;
+  font-size: medium;
 }
 
 .style17 {
-	border-color: #000000;
-	border-width: 0;
-	text-align: center;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
-	border-collapse: collapse;
+  border-color: #000000;
+  border-width: 0;
+  text-align: center;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
 }
 
 .style18 {
-	font-family: Arial;
-	font-size: 10pt;
-	color: #FFFFAA;
-}
-
-.style19 {
-	border-style: solid;
-	border-width: 1px;
-	text-align: left;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
-	border-collapse: collapse;
+  font-family: Arial;
+  font-size: 10pt;
+  color: #ffffaa;
 }
 
 .style20 {
-	border-width: 0;
-	text-align: center;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
-	border-collapse: collapse;
+  border-width: 0;
+  text-align: center;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
 }
 
 .style22 {
-	margin: 2px;
-	border-width: 0;
+  margin: 2px;
+  border-width: 0;
 }
 
 .style23 {
-    border-color: #2E4D47;
-    text-align: center;
-    border-width: 0;
-    border-collapse: collapse;
+  border-color: #2e4d47;
+  text-align: center;
+  border-width: 0;
+  border-collapse: collapse;
 }
 
 .byline {
-	font-family: sans-serif;
-	font-size: 75%;
-	color: gray;
-	line-height: 20%;
+  font-family: sans-serif;
+  font-size: 75%;
+  color: gray;
+  line-height: 20%;
 }
 
 .headline {
-	line-height: 20%;
+  line-height: 20%;
 }
 
 .style101 {
-	text-align: center;
+  text-align: center;
 }
 
 .style99 {
-	background-image: url('../images/throws1st.jpg');
+  background-image: url("../images/throws1st.jpg");
 }
 
 .schedlink a:link {
-	color: #2e4d47;
+  color: #2e4d47;
 }
 
 /* visited link */
 .schedlink a:visited {
-	color: #2e4d47;
+  color: #2e4d47;
 }
 
 /* mouse over link */
 .schedlink a:hover {
-	color: black;
+  color: black;
 }
 
 /* selected link */
 .schedlink a:active {
-	color: black;
+  color: black;
 }
 
 .schedlink a:link {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .schedlink a:visited {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .schedlink a:hover {
-	text-decoration: none;
-	text-decoration: underline;
+  text-decoration: none;
+  text-decoration: underline;
 }
 
 .schedlink a:active {
-	color: white;
-	background-color: #2e4d47;
-	text-decoration: none;
+  color: white;
+  background-color: #2e4d47;
+  text-decoration: none;
 }
-
 
 /* Style the header */
 .header {
-	grid-area: header;
-	text-align: center;
-  }
-  
+  grid-area: header;
+  text-align: center;
+}
+
 /* Style the footer */
 .footer {
-	grid-area: footer;
-	text-align: center;
-  }
-  
-  .menuicon {
-	display: none;
-  }
-  
-  .left,
+  grid-area: footer;
+  text-align: center;
+}
+
+.menuicon {
+  display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.left,
 .middle,
 .right {
   padding: 0px 5px 0px 5px;
@@ -387,20 +380,18 @@ ul.o {
 }
 
 .schoollogo {
-	cursor: pointer;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 20px 0px 0px 0px;
-  }
-  
-  .schooladdress a {
-	text-decoration: none;
-	color: #2e4d47;
-	font-size: smaller;
-  }
-  
-  
+  cursor: pointer;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px 0px 0px 0px;
+}
+
+.schooladdress a {
+  text-decoration: none;
+  color: #2e4d47;
+  font-size: smaller;
+}
 
 /* The grid container */
 .grid-container {
@@ -419,10 +410,10 @@ ul.o {
   }
   .grid-container {
     grid-template-areas:
-    "header header header header"
-    "menubar menubar menubar menubar"
-    "left middle middle right"
-    "footer footer footer footer";
+      "header header header header"
+      "menubar menubar menubar menubar"
+      "left middle middle right"
+      "footer footer footer footer";
   }
 }
 
@@ -433,14 +424,13 @@ ul.o {
   }
   .grid-container {
     grid-template-areas:
-    "header header header header"
-    "menubar menubar menubar menubar"
-    "left middle middle right"
-    "footer footer footer footer";
+      "header header header header"
+      "menubar menubar menubar menubar"
+      "left middle middle right"
+      "footer footer footer footer";
   }
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media only screen and (max-width: 600px) {
   .left,
   .right {
@@ -448,9 +438,9 @@ ul.o {
   }
   .grid-container {
     grid-template-areas:
-    "header header header"
-    "menubar menubar menubar"
-    "left middle right"
-    "footer footer footer";
+      "header header header header"
+      "menubar menubar menubar menubar"
+      "left middle middle right"
+      "footer footer footer footer";
   }
 }
