--- a/css/schedule.css
+++ b/css/schedule.css
@@ -10,11 +10,43 @@ td {
     padding: 0px 7px 0px 1px;
 }
 
+.schedlink {
+	text-align: center;
+}
+
+.schedlink a:link {
+  color: #2e4d47;
+}
+
+/* visited link */
+.schedlink a:visited {
+  color: #2e4d47;
+}
+
+.schedlink a:link {
+	text-decoration: none;
+}
+
+.schedlink a:visited {
+	text-decoration: none;
+}
+
+.schedlink a:hover {
+	color: black;
+	text-decoration: none;
+}
+
+.schedlink a:active {
+	color: black;
+  background-color: #2e4d47;
+  text-decoration: none;
+}
+
 .schedtable {
 	border-style: solid;
 	border-width: 1px;
 	text-align: left;
 	color: black;
 	font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
