--- a/css/records.css
+++ b/css/records.css
@@ -1,7 +1,105 @@
-#recordTable, #divtopTenTable, #champs{	text-align: center;}
-table.recordTable {	max-width: 900px;/*	min-width:600px; */	margin: auto;	border-style: solid;	border-width: 1px;	text-align: left;	background-color: white;	color: black;	font-family: Arial, Helvetica, sans-serif;	font-weight: normal;	border-collapse: collapse;	border-color: gray;}
-table.recordTable td {	border-style: solid;	border-width: 1px;	border-collapse: collapse;	border-color: gray;	padding-left: 5px;	padding-right: 5px;	padding-top: 3px;	padding-bottom: 3px;	min-width:60px;}
-table.recordTable tr.header {	background-color: #2E4D47;	color: #FFFFAA;}
-table.recordTable tr a.eventAnchor{	text-decoration:none;}
-table.recordTable tr.performance{	background-color: white;	color: black;	font-style: normal;}table.recordTable tr.nonrecord{	display:none;}table.recordTable tr.recordHighlight{	display:table-row;	background-color: #A2D5A1;/* 	background-color: #1c5e52; */	color: black;/* 	color :#FFFFAA;  */	font-style: normal; /*	font-size: larger;*/}
-table.recordTable tr.recordHeader{	display:table-row;/* 	background-color: #A2D5A1; */	background-color: #1c5e52;/* 	color: black; */	font-style: normal; 	color :#FFFFAA; /*	font-size: larger;*/}table.recordTable tr.performanceHighlight{	font-style: italic; 	display:table-row;/*	background-color: #A2D5A1;*//* 	font-size: smaller; */}table.recordTable td.eventClick{	cursor: pointer;}table.recordTable tr.currentYear {	font-weight: bold}table.recordTable td span.atkrank {	}
+#recordTable, #divtopTenTable, #champs{
+	text-align: center;
+}
+
+table.recordTable {
+	/* max-width: 900px; */
+/*	min-width:600px; */
+	margin: auto;
+	border-style: solid;
+	border-width: 1px;
+	text-align: left;
+	background-color: white;
+	color: black;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: normal;
+	border-collapse: collapse;
+	border-color: gray;
+}
+
+
+table.recordTable th {
+	font-weight: normal;
+	color: #FFFFAA;
+	background-color: #2E4D47;
+}
+
+table.recordTable td {
+	border-style: solid;
+	border-width: 1px;
+	border-collapse: collapse;
+	border-color: gray;
+	padding: 0px 7px 0px 1px;
+	/* word-wrap : break-word; */
+	/* padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 3px;
+	padding-bottom: 3px;
+	min-width:60px; */
+}
+
+table.recordTable tr:nth-child(even) {
+	background-color: #A2D5A1;
+}
+
+table.recordTable tr:nth-child(odd) {
+	background-color:white;
+}
+
+table.recordTable tr.header {
+	background-color: #2E4D47;
+	color: #FFFFAA;
+}
+
+
+table.recordTable tr a.eventAnchor{
+	text-decoration:none;
+}
+
+table.recordTable tr.performance{
+	background-color: white;
+	color: black;
+	font-style: normal;
+}
+
+table.recordTable tr.nonrecord{
+	display:none;
+}
+
+table.recordTable tr.recordHighlight{
+	display:table-row;
+	background-color: #A2D5A1;
+/* 	background-color: #1c5e52; */
+	color: black;
+/* 	color :#FFFFAA;  */
+	font-style: normal; 
+/*	font-size: larger;*/
+}
+
+table.recordTable tr.recordHeader{
+	display:table-row;
+/* 	background-color: #A2D5A1; */
+	background-color: #1c5e52;
+/* 	color: black; */
+	font-style: normal; 
+	color :#FFFFAA; 
+/*	font-size: larger;*/
+}
+
+table.recordTable tr.performanceHighlight{
+	font-style: italic; 
+	display:table-row;
+/*	background-color: #A2D5A1;*/
+/* 	font-size: smaller; */
+}
+table.recordTable td.eventClick{
+	cursor: pointer;
+}
+
+table.recordTable tr.currentYear {
+	font-weight: bold
+}
+
+table.recordTable td span.atkrank {
+	
+}
