--- a/css/records.css
+++ b/css/records.css
@@ -3,8 +3,6 @@
 }
 
 table.recordTable {
-	/* max-width: 900px; */
-/*	min-width:600px; */
 	margin: auto;
 	border-style: solid;
 	border-width: 1px;
@@ -99,4 +97,42 @@ table.recordTable td.eventClick{
 
 table.recordTable tr.currentYear {
 	font-weight: bold
+}
+
+/* .toptentableheader {
+	font-size: 10pt;
+
+}
+
+.toptentableheader i {
+	font-size: 11pt;
+} */
+
+.expandall {
+	float: right;
+}
+
+.toptentableheader a {
+	text-decoration:none;
+}
+
+.toptentableheader a {
+	color: #6a9990;
+	text-decoration: none;
+}
+
+
+.toptentableheader a:link {
+	/* color: #2e4d47; */
+	text-decoration: none;
+}
+
+.toptentableheader a:visted {
+	color: #2e4d47;
+	text-decoration: none;
+}
+
+.toptentableheader a:hover {
+	color:black;
+	text-decoration: none;
 }
