--- a/css/sms.css
+++ b/css/sms.css
@@ -495,6 +495,14 @@ i {
     display: none;
   }
 
+  .toptenyear {
+    display: none;
+  }
+
+  .recordsyear {
+    display: none;
+  }
+
   .grid-container {
     grid-template-areas:
     "mainheader mainheader mainheader mainheader"
