--- a/css/sms.css
+++ b/css/sms.css
@@ -274,6 +274,22 @@ i {
   z-index: 0;
 }
 
+.iframediv {
+  position: relative;
+  overflow: hidden;
+    padding-top: 60%;
+}
+
+.iframeabs {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  padding: 1px;
+}
+
 .style3 {
   text-align: right;
 }
@@ -453,6 +469,7 @@ i {
     "left middle middle right"
     "footer footer footer footer";
 }
+
 
 @media only screen and (max-width: 850px) {
   .left,
