--- a/css/sms.css
+++ b/css/sms.css
@@ -267,7 +267,7 @@ i {
 }
 
 .throwshero {
-  background-image: url("/images/throws1st.jpg");
+  background-image: url("/images/throws1.jpg");
   background-position: 0, 0;
   background-repeat: no-repeat, no-repeat;
   height: 200px;
