--- a/css/sms.css
+++ b/css/sms.css
@@ -466,6 +466,7 @@ i {
   text-transform: none !important;
   letter-spacing: 1px !important;
   text-decoration: none;
+  font-size: 1.25rem;
   color: #508d24;
 }
 
