--- a/css/sms.css
+++ b/css/sms.css
@@ -377,6 +377,19 @@ i {
   line-height: 20%;
 }
 
+.bandbody {
+  text-decoration: none;
+  color: #4d504f;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: smaller;
+}
+
+.bandbody a:link {
+  text-decoration: underline;
+  color: #4d504f;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 /* .headline {
   line-height: 20%;
 } */
